--- a/Lesson2/TimeInSeconds/TimeInSeconds.csproj
+++ b/Lesson2/TimeInSeconds/TimeInSeconds.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{277FCA3D-4E1F-46B4-A698-733768259E53}</ProjectGuid>
+    <ProjectGuid>{3C1C66E3-BE52-424D-AD60-949008CE55A5}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CSharpBasic_Hillel</RootNamespace>
-    <AssemblyName>CSharpBasic_Hillel</AssemblyName>
+    <RootNamespace>TimeInSeconds</RootNamespace>
+    <AssemblyName>TimeInSeconds</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,9 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Lesson2\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
